--- a/views/addPatient.hbs
+++ b/views/addPatient.hbs
@@ -15,213 +15,7 @@
         </form>
     </div><!-- End Search Bar -->
 
-    <nav class="header-nav ms-auto">
-        <ul class="d-flex align-items-center">
-            <li class="nav-item d-block d-lg-none">
-                <a class="nav-link nav-icon search-bar-toggle " href="#">
-                    <i class="bi bi-search"></i>
-                </a>
-            </li><!-- End Search Icon-->
 
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-bell"></i>
-                    <span class="badge bg-primary badge-number">4</span>
-                </a><!-- End Notification Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                    <li class="dropdown-header">
-                        You have 4 new notifications
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-exclamation-circle text-warning"></i>
-                        <div>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>30 min. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-x-circle text-danger"></i>
-                        <div>
-                            <h4>Atque rerum nesciunt</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>1 hr. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-check-circle text-success"></i>
-                        <div>
-                            <h4>Sit rerum fuga</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>2 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-info-circle text-primary"></i>
-                        <div>
-                            <h4>Dicta reprehenderit</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>4 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li class="dropdown-footer">
-                        <a href="#">Show all notifications</a>
-                    </li>
-
-                </ul><!-- End Notification Dropdown Items -->
-
-            </li><!-- End Notification Nav -->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-chat-left-text"></i>
-                    <span class="badge bg-success badge-number">3</span>
-                </a><!-- End Messages Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                    <li class="dropdown-header">
-                        You have 3 new messages
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-1.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Maria Hudson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-2.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Anna Nelson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>6 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-3.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>David Muldon</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>8 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="dropdown-footer">
-                        <a href="#">Show all messages</a>
-                    </li>
-
-                </ul><!-- End Messages Dropdown Items -->
-
-            </li><!-- End Messages Nav -->
-
-            <!--            <li class="nav-item dropdown pe-3">-->
-
-            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
-            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
-            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
-            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
-
-            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
-            <!--                    <li class="dropdown-header">-->
-            <!--                        <h6>Kevin Anderson</h6>-->
-            <!--                        <span>Web Designer</span>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-person"></i>-->
-            <!--                            <span>My Profile</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-gear"></i>-->
-            <!--                            <span>Account Settings</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
-            <!--                            <i class="bi bi-question-circle"></i>-->
-            <!--                            <span>Need Help?</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
-            <!--                            <i class="bi bi-box-arrow-right"></i>-->
-            <!--                            <span>Sign Out</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-
-            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
-            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
-
-        </ul>
-    </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
 <aside id="sidebar" class="sidebar">
@@ -307,6 +101,21 @@
 <main id="main" class="main">
     <div class="pagetitle">
         <h1>Thêm bệnh nhân</h1>
+        {{# if success }}
+            <section class="success">
+                <h2> </h2>
+            </section>
+        {{ else }}
+            {{# if errors }}
+                <section class="errors">
+                    <ul>
+                        {{# each errors }}
+                            <li class="alert alert-danger">{{ this.msg }}</li>
+                        {{/each}}
+                    </ul>
+                </section>
+            {{/if}}
+        {{/if}}
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
@@ -323,31 +132,45 @@
                 <form class="row g-3" action="/add-patient" id="application-form" method="post">
                     <div class="col-12">
                         <label for="inputNanme4" class="form-label">Username</label>
-                        <input type="text" name="username" class="form-control" id="inputNanme4">
+                        <div class="input-group has-validation">
+                        <input type="text" name="username" class="form-control" id="inputNanme4" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputEmail4" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" id="inputEmail4">
+                        <div class="input-group has-validation">
+                        <input type="password" name="password" class="form-control" id="inputEmail4" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputPassword4" class="form-label">ID</label>
-                        <input type="number" name="id" class="form-control" id="inputPassword4">
+                        <div class=" input-group has-validation">
+                        <input type="number" name="id" class="form-control" id="inputPassword4" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Tuổi</label>
-                        <input type="number" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="18">
+                        <div class="input-group has-validation">
+                        <input type="number" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="18" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Họ Và Tên</label>
-                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="Nguyen Van A">
+                        <div class="input-group has-validation">
+                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="Nguyen Van A" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Số Điện Thoại</label>
-                        <input type="number" name="phone" class="form-control" id="inputAddress" placeholder="03456789900">
+                        <div class="input-group has-validation">
+                        <input type="number" name="phone" class="form-control" id="inputAddress" placeholder="03456789900" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Ngày Sinh</label>
-                        <input type="date"name="birth_day" class="form-control" id="inputAddress" placeholder="01/01/2021">
+                        <div class="input-group has-validation">
+                        <input type="date"name="birth_day" class="form-control" id="inputAddress" placeholder="01/01/2021" required>
+                        </div>
                     </div>
                     <div class="col-2">
                                                         <label class="label">Giới Tính</label>
@@ -366,15 +189,19 @@
                                                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Phòng</label>
-                        <input type="text"name="number_room" class="form-control" id="inputAddress" placeholder="Phòng 01">
+                        <div class="input-group has-validation">
+                        <input type="text"name="number_room" class="form-control" id="inputAddress" placeholder="Phòng 01" required>
+                        </div>
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Key device</label>
-                        <input type="text"name="key_device"class="form-control" id="inputAddress" placeholder="device02">
+                        <div class="input-group has-validation">
+                        <input type="text"name="key_device"class="form-control" id="inputAddress" placeholder="device02" required>
+                        </div>
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary">Thêm</button>
-                        <button type="reset" class="btn btn-secondary">Reset</button>
+                        <button type="reset" class="btn btn-secondary">Đặt lại </button>
                     </div>
                 </form><!-- Vertical Form -->
 
