--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -25,202 +25,7 @@
                 </a>
             </li><!-- End Search Icon-->
 
-            <li class="nav-item dropdown">
 
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-bell"></i>
-                    <span class="badge bg-primary badge-number">4</span>
-                </a><!-- End Notification Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                    <li class="dropdown-header">
-                        You have 4 new notifications
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-exclamation-circle text-warning"></i>
-                        <div>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>30 min. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-x-circle text-danger"></i>
-                        <div>
-                            <h4>Atque rerum nesciunt</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>1 hr. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-check-circle text-success"></i>
-                        <div>
-                            <h4>Sit rerum fuga</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>2 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-info-circle text-primary"></i>
-                        <div>
-                            <h4>Dicta reprehenderit</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>4 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li class="dropdown-footer">
-                        <a href="#">Show all notifications</a>
-                    </li>
-
-                </ul><!-- End Notification Dropdown Items -->
-
-            </li><!-- End Notification Nav -->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-chat-left-text"></i>
-                    <span class="badge bg-success badge-number">3</span>
-                </a><!-- End Messages Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                    <li class="dropdown-header">
-                        You have 3 new messages
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-1.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Maria Hudson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-2.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Anna Nelson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>6 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="assets/img/messages-3.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>David Muldon</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>8 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="dropdown-footer">
-                        <a href="#">Show all messages</a>
-                    </li>
-
-                </ul><!-- End Messages Dropdown Items -->
-
-            </li><!-- End Messages Nav -->
-
-            <!--            <li class="nav-item dropdown pe-3">-->
-
-            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
-            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
-            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
-            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
-
-            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
-            <!--                    <li class="dropdown-header">-->
-            <!--                        <h6>Kevin Anderson</h6>-->
-            <!--                        <span>Web Designer</span>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-person"></i>-->
-            <!--                            <span>My Profile</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-gear"></i>-->
-            <!--                            <span>Account Settings</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
-            <!--                            <i class="bi bi-question-circle"></i>-->
-            <!--                            <span>Need Help?</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
-            <!--                            <i class="bi bi-box-arrow-right"></i>-->
-            <!--                            <span>Sign Out</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-
-            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
-            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
         </ul>
     </nav><!-- End Icons Navigation -->
@@ -340,10 +145,11 @@
                                 <th scope="col">Sự kiện</th>
                             </tr>
                             </thead>
+                        <tbody>
 {{#each docs}}
-                            <tbody >
+
                             {{#compare this.state "==" 2}}
-                            <tr class="table-danger">
+                            <tr class="table-warning">
                                 <th scope="row"><a href="#">#</a></th>
                                 <td>{{this.id}}</td>
                                 <td>{{this.name}}</td>
@@ -367,7 +173,7 @@
                             </tr>
                             {{/compare}}
                             {{#compare this.state "==" 1}}
-                                <tr class="table-warning">
+                                <tr class="table-info">
                                     <th scope="row"><a href="#">#</a></th>
                                     <td>{{this.id}}</td>
                                     <td>{{this.name}}</td>
@@ -391,7 +197,7 @@
                                 </tr>
                             {{/compare}}
                             {{#compare this.state "==" 0}}
-                                <tr  class="table-info">
+                                <tr  class="table-success">
                                     <th scope="row"><a href="#">#</a></th>
                                     <td>{{this.id}}</td>
                                     <td>{{this.name}}</td>
@@ -414,31 +220,34 @@
                                     <!--                               -->
                                 </tr>
                             {{/compare}}
-                            </tbody>
+                            {{#compare this.state "==" 3}}
+                                <tr  class="table-danger">
+                                    <th scope="row"><a href="#">#</a></th>
+                                    <td>{{this.id}}</td>
+                                    <td>{{this.name}}</td>
+                                    <td>{{this.phone}}</td>
+                                    <td>{{this.number_room}}</td>
+                                    <td>
+                                        <div class="card-body">
 
-<!--        <script>-->
-<!--            (function () {-->
-<!--                        var state;-->
-<!--                        state={{this.state}};-->
-<!--                        console.log(state)-->
+                                            <a type="button" href="/{{this._id}}" class="btn btn-secondary">Chi Tiết <i class="bi bi-collection"></i></a>
 
-<!--                        if (state == 2) {-->
-<!--                            document.getElementById("centerbox1").style.backgroundColor = '#99C262';-->
-<!--                        }-->
-<!--                        else if (state == 1)-->
-<!--                        {-->
-<!--                            document.getElementById("centerbox1").style.backgroundColor = '#F8D347';-->
-<!--                        }-->
-<!--                       else if (state == 0)-->
-<!--                        {-->
-<!--                            document.getElementById("centerbox1").style.backgroundColor = '#FF6C60';-->
-<!--                        }-->
+                                            <a type="button" href="/delete/{{this._id}}" class="btn btn-danger">Xóa <i class="bi bi-exclamation-octagon"></i></a>
 
-<!--                    }-->
-<!--            )();-->
-<!--        </script>-->
+                                            <!--                                            <a type="button" href="/list-patients/update/{{this._id}}" class="btn btn-info"><i class="bi bi-info-circle"></i></a>-->
+
+                                        </div>
+
+                                    </td>
+                                    <!--                              -->
+                                    <!--                                    <td><a href="#" class="btn btn-success">{{this.state}}</a></td>-->
+                                    <!--                               -->
+                                </tr>
+                            {{/compare}}
+
 
 {{/each}}
+                        </tbody>
                         </table>
                         <!-- End Table with stripped rows -->
 
