--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -402,7 +402,7 @@
                                         <div class="accordion" id="accordionExample">
                                             {{#each device}}
                                                 <div class="accordion-item">
-                                                    {{#each this.track_history}}
+                                                    {{#each this.treatment_course}}
                                                         <h2 class="accordion-header" id="headingOne">
                                                             <button class="accordion-button" type="button"
                                                                     data-bs-toggle="collapse"
