--- a/views/addPatient.hbs
+++ b/views/addPatient.hbs
@@ -126,7 +126,7 @@
     <section class="section">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Vertical Form</h5>
+                <h5 class="card-title">Thêm bệnh nhân</h5>
 
                 <!-- Vertical Form -->
                 <form class="row g-3" action="/add-patient" id="application-form" method="post">
