--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -167,6 +167,10 @@
                             </div><!-- End Basic Modal-->
 
                         </div>
+                        <a href="http://192.168.0.108/" type="button" class="btn btn-info" data-bs-toggle="modal"
+                                data-bs-target="#basicModal">
+                            Camera bệnh nhân
+                        </a>
                     </div>
 
                 </div>
