--- a/views/add_doctor.hbs
+++ b/views/add_doctor.hbs
@@ -44,7 +44,16 @@
                         <i class="bi bi-circle"></i><span>Thêm Bệnh Nhân</span>
                     </a>
                 </li>
-
+                <li>
+                    <a href="/curedlist">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân Đã Khỏi</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/dielist">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân Đã Tử Vong</span>
+                    </a>
+                </li>
             </ul>
         </li><!-- End Components Nav -->
 
@@ -59,7 +68,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="forms-layouts.html">
+                    <a href="/adddoctor">
                         <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
                     </a>
                 </li>
@@ -77,7 +86,7 @@
 
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/">
+            <a class="nav-link collapsed" href="/404">
                 <i class="bi bi-question-circle"></i>
                 <span>F.A.Q</span>
             </a>
