--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -59,7 +59,16 @@
                         <i class="bi bi-circle"></i><span>Thêm Bệnh Nhân</span>
                     </a>
                 </li>
-
+                <li>
+                    <a href="/curedlist">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân Đã Khỏi</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/dielist">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân Đã Tử Vong</span>
+                    </a>
+                </li>
             </ul>
         </li><!-- End Components Nav -->
 
@@ -92,10 +101,9 @@
 
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/">
+            <a class="nav-link collapsed" href="/404">
                 <i class="bi bi-question-circle"></i>
                 <span>F.A.Q</span>
-            </a>
             </a>
         </li><!-- End F.A.Q Page Nav -->
 
