--- a/views/notification.hbs
+++ b/views/notification.hbs
@@ -1359,6 +1359,13 @@
                         </div>
                     </div>
                     <div class="col-12">
+
+                        <label for="inputAddress" class="form-label">Trạng thái</label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" id="inputAddress"  name="status"  required>
+                        </div>
+                    </div>
+                    <div class="col-12">
                         <label for="inputAddress" class="form-label">Phương pháp điều trị</label>
                         <div class="input-group has-validation">
                         <input type="text" class="form-control" id="inputAddress" name="medicine" rows="5"  required>
