--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -186,8 +186,7 @@
                             </div><!-- End Basic Modal-->
 
                         </div>
-                        <a href="http://192.168.0.108/" type="button" class="btn btn-info" data-bs-toggle="modal"
-                                data-bs-target="#basicModal">
+                        <a href="http://192.168.0.108/" type="button" class="btn btn-info" >
                             Camera bệnh nhân
                         </a>
                     </div>
