--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1162,7 +1162,7 @@
         <li class="nav-item">
             <a class="nav-link " href="/dashboard">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Thống kê</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
@@ -1232,7 +1232,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="/contact/to">
                 <i class="bi bi-envelope"></i>
-                <span>Contact</span>
+                <span>Liên hệ</span>
             </a>
         </li><!-- End Contact Page Nav -->
 
@@ -1248,12 +1248,12 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Contact</h1>
+        <h1>Liên hệ</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item">Pages</li>
-                <li class="breadcrumb-item active">Contact</li>
+                <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
+
+                <li class="breadcrumb-item active">Liên hệ</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -1265,72 +1265,72 @@
             <div class="col-xl-6">
 
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <div class="info-box card">
                             <i class="bi bi-geo-alt"></i>
                             <h3>Địa chỉ</h3>
                             <p>Trường Cao Đẳng<br>FPT Polytechnic</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <div class="info-box card">
                             <i class="bi bi-telephone"></i>
                             <h3>Số điện thoại</h3>
                             <p>+84 123456789<br>+84 746627834</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <div class="info-box card">
                             <i class="bi bi-envelope"></i>
-                            <h3>Email Us</h3>
+                            <h3>Email</h3>
                             <p>datn@fpt.edu.vn<br>contact@example.com</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="info-box card">
-                            <i class="bi bi-clock"></i>
-                            <h3>Open Hours</h3>
-                            <p>Monday - Friday<br>9:00AM - 05:00PM</p>
-                        </div>
-                    </div>
+<!--                    <div class="col-lg-6">-->
+<!--                        <div class="info-box card">-->
+<!--                            <i class="bi bi-clock"></i>-->
+<!--                            <h3>Open Hours</h3>-->
+<!--                            <p>Monday - Friday<br>9:00AM - 05:00PM</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
 
             </div>
 
-            <div class="col-xl-6">
-                <div class="card p-4">
-                    <form action="forms/contact.php" method="post" class="php-email-form">
-                        <div class="row gy-4">
+<!--            <div class="col-xl-6">-->
+<!--                <div class="card p-4">-->
+<!--                    <form action="forms/contact.php" method="post" class="php-email-form">-->
+<!--                        <div class="row gy-4">-->
 
-                            <div class="col-md-6">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                            </div>
+<!--                            <div class="col-md-6">-->
+<!--                                <input type="text" name="name" class="form-control" placeholder="Your Name" required>-->
+<!--                            </div>-->
 
-                            <div class="col-md-6 ">
-                                <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-                            </div>
+<!--                            <div class="col-md-6 ">-->
+<!--                                <input type="email" class="form-control" name="email" placeholder="Your Email" required>-->
+<!--                            </div>-->
 
-                            <div class="col-md-12">
-                                <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                            </div>
+<!--                            <div class="col-md-12">-->
+<!--                                <input type="text" class="form-control" name="subject" placeholder="Subject" required>-->
+<!--                            </div>-->
 
-                            <div class="col-md-12">
-                                <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                            </div>
+<!--                            <div class="col-md-12">-->
+<!--                                <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>-->
+<!--                            </div>-->
 
-                            <div class="col-md-12 text-center">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+<!--                            <div class="col-md-12 text-center">-->
+<!--                                <div class="loading">Loading</div>-->
+<!--                                <div class="error-message"></div>-->
+<!--                                <div class="sent-message">Your message has been sent. Thank you!</div>-->
 
-                                <button type="submit">Send Message</button>
-                            </div>
+<!--                                <button type="submit">Send Message</button>-->
+<!--                            </div>-->
 
-                        </div>
-                    </form>
-                </div>
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
 
-            </div>
+<!--            </div>-->
 
         </div>
 
@@ -1339,18 +1339,18 @@
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
-    <div class="copyright">
-        &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-</footer><!-- End Footer -->
+<!--<footer id="footer" class="footer">-->
+<!--    <div class="copyright">-->
+<!--        &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved-->
+<!--    </div>-->
+<!--    <div class="credits">-->
+<!--        &lt;!&ndash; All the links in the footer should remain intact. &ndash;&gt;-->
+<!--        &lt;!&ndash; You can delete the links only if you purchased the pro version. &ndash;&gt;-->
+<!--        &lt;!&ndash; Licensing information: https://bootstrapmade.com/license/ &ndash;&gt;-->
+<!--        &lt;!&ndash; Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ &ndash;&gt;-->
+<!--        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+<!--    </div>-->
+<!--</footer>&lt;!&ndash; End Footer &ndash;&gt;-->
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
