--- a/views/listDoctor.hbs
+++ b/views/listDoctor.hbs
@@ -157,7 +157,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="/contact/to">
                 <i class="bi bi-envelope"></i>
-                <span>Contact</span>
+                <span>Liên hệ</span>
             </a>
         </li><!-- End Contact Page Nav -->
 
