--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -40,7 +40,7 @@
         <li class="nav-item">
             <a class="nav-link " href="/dashboard">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Thống kê</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
@@ -110,7 +110,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="/contact/to">
                 <i class="bi bi-envelope"></i>
-                <span>Contact</span>
+                <span>Liên hệ</span>
             </a>
         </li><!-- End Contact Page Nav -->
 
