--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -28,7 +28,7 @@
         <li class="nav-item">
             <a class="nav-link " href="/dashboard">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Thống kê</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
@@ -98,7 +98,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="/contact/to">
                 <i class="bi bi-envelope"></i>
-                <span>Contact</span>
+                <span>Liên hệ</span>
             </a>
         </li><!-- End Contact Page Nav -->
 
@@ -117,7 +117,7 @@
         <h1>Thông tin chi tiết bệnh nhân</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Thống kê</a></li>
                 <li class="breadcrumb-item"><a href="/list-patients">Danh sách bệnh nhân</a></li>
                 <li class="breadcrumb-item active">Thông tin bệnh nhân</li>
             </ol>
@@ -306,12 +306,12 @@
                                         <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Ảnh</label>
                                         <div class="col-md-8 col-lg-9">
                                             <img src="img/profile-img.jpg" alt="Profile">
-                                            <div class="pt-2">
-                                                <a href="#" class="btn btn-primary btn-sm"
-                                                   title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                                                <a href="#" class="btn btn-danger btn-sm"
-                                                   title="Remove my profile image"><i class="bi bi-trash"></i></a>
-                                            </div>
+<!--                                            <div class="pt-2">-->
+<!--                                                <a href="#" class="btn btn-primary btn-sm"-->
+<!--                                                   title="Upload new profile image"><i class="bi bi-upload"></i></a>-->
+<!--                                                <a href="#" class="btn btn-danger btn-sm"-->
+<!--                                                   title="Remove my profile image"><i class="bi bi-trash"></i></a>-->
+<!--                                            </div>-->
                                         </div>
                                     </div>
 
@@ -391,7 +391,7 @@
                                             <table class="table table-striped">
                                                 <thead>
                                                 <tr>
-                                                    <th scope="col">#</th>
+<!--                                                    <th scope="col">#</th>-->
                                                     <th scope="col">Nhịp Tim</th>
                                                     <th scope="col">SP02</th>
                                                     <th scope="col">Nhiệt độ</th>
@@ -401,7 +401,7 @@
                                                 <tbody>
                                                 {{#each device}}
                                                     <tr>
-                                                        <th scope="row">1</th>
+<!--                                                        <th scope="row">1</th>-->
                                                         <td>{{#each this.heart}}
                                                             <div style="margin-top: 20px"><b>Nhịp tim:</b>{{this.value}}
                                                                 nhịp/phút
@@ -602,14 +602,14 @@
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
     <div class="copyright">
-        &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Quản Lý Bệnh Nhân</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="/dashboard">Du An Tot Nghiep</a>
     </div>
 </footer><!-- End Footer -->
 
