--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -40,7 +40,7 @@
         <li class="nav-item">
             <a class="nav-link " href="/dashboard">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Thống kê</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
@@ -110,7 +110,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="/contact/to">
                 <i class="bi bi-envelope"></i>
-                <span>Contact</span>
+                <span>Liên hệ</span>
             </a>
         </li><!-- End Contact Page Nav -->
 
@@ -125,11 +125,11 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Dashboard</h1>
+        <h1>Thống kê</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
-                <li class="breadcrumb-item active">Dashboard</li>
+                <li class="breadcrumb-item active">Thống kê</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -280,7 +280,7 @@
                                                 left: 'center'
                                             },
                                             series: [{
-                                                name: 'Access From',
+                                                name: '',
                                                 type: 'pie',
                                                 radius: ['40%', '70%'],
                                                 avoidLabelOverlap: false,
@@ -488,7 +488,7 @@
                                                     bottom: 'bottom'
                                                 },
                                                 series: [{
-                                                    name: 'Access From',
+                                                    name: '',
                                                     type: 'pie',
                                                     radius: '50%',
                                                     data: [{
@@ -835,7 +835,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://www.facebook.com/HiIamDuc07/">Du An Tot Nghiep</a>
+        Designed by <a href="/dashboard">Du An Tot Nghiep</a>
     </div>
 </footer><!-- End Footer -->
 
